--- a/TT/TT.csproj
+++ b/TT/TT.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ExportToCSVController .cs" />
     <Compile Include="Controllers\PunchEditController.cs" />
     <Compile Include="Controllers\CreatePunchController.cs" />
     <Compile Include="Controllers\ForgetPasswordController.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="Models\Model_PunchRecordEdit.cs" />
     <Compile Include="Models\Model_PunchRecordCreate.cs" />
     <Compile Include="Models\Model_PunchRecordSearch.cs" />
+    <Compile Include="Models\Model_WriteToCSV.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -258,6 +260,7 @@
     <Content Include="EFModels\LineAtDB.edmx.diagram">
       <DependentUpon>LineAtDB.edmx</DependentUpon>
     </Content>
+    <Content Include="app.manifest" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -319,6 +322,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
